<resources>
    <string name="app_name">SmartLock</string>
    <string name="application_icon">Application Icon</string>
    <string name="application_lock_icon">Application Lock Icon</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="NavigationHome">Home</string>
    <string name="NavigationUnlocked">Unlocked</string>
    <string name="NavigationLocked">Locked</string>
    <string name="home_fragment_locked">Locked</string>
    <string name="home_fragment_unlocked">Unlocked</string>
    <string name="home_fragment_title">Welcome!</string>
    <string name="home_fragment_instructions">Lock the applications you choose to, and then activate the lock by pressing the lock image above!</string>
    <string name="home_fragment_help">You may close the application afterwards, and only re-enter it in case you need to manually lock / unlock more applications.</string>
    <string name="unlocked_fragment_title">Unlocked Apps</string>
    <string name="locked_fragment_title">Locked Apps</string>
    <string name="lock_title">This application is locked!</string>
    <string name="lock_input_pass">Input the password</string>
    <string name="lock_enter">ENTER</string>
    <string name="lock_exit">EXIT</string>
    <string name="password_text">Please input your password:</string>
    <string name="password_pass">Your password</string>
    <string name="email_hint">Your Email</string>
    <string name="email_text">Please input your email address:</string>
    <string name="lock_text">Please input your password to unlock the application.</string>
</resources>