<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_TXT_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:text="@string/home_fragment_title"
        android:textSize="46sp"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/home_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/home_TXT_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_fragment_unlocked"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <net.colindodd.toggleimagebutton.ToggleImageButton
        android:id="@+id/home_BTN_activate"
        xmlns:tib="http://schemas.android.com/apk/res-auto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tib:tib_drawable_on="@drawable/icon_locked"
        tib:tib_drawable_off="@drawable/icon_unlocked"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/home_TXT_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/home_fragment_instructions"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/home_TXT_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/home_fragment_help"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        />


</LinearLayout>